manifests/apps/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-https
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - radarr.example.com
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: radarr
          port: 7878
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
