manifests/apps/radarr/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: radarr-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: radarr-https
  oidc:
    provider:
      issuer: https://iam.example.com/auth/v1/
    clientIDRef:
      name: radarr-oidc-secret
    clientSecret:
      name: radarr-oidc-secret
    redirectURL: https://radarr.example.com/oauth2/callback
    logoutPath: /logout
